Update case studies for 2025: changed project years to 2025 for Growth Ladder Group and EVERNET Consulting, added new links for EVERNET's live website and pricing pages, and updated project navigation to reflect new case studies. Enhanced CSS for case links to improve layout and responsiveness.

--- a/case-study-evernet.html
+++ b/case-study-evernet.html
@@ -56,10 +56,16 @@
             <div class="case-hero-content">
                 <div class="case-meta">
                     <span class="case-type">WordPress Design & Development</span>
-                    <span class="case-year">2024</span>
+                    <span class="case-year">2025</span>
                 </div>
                 <h1 class="case-title">EVERNET Consulting</h1>
                 <p class="case-subtitle">Complete WordPress website design and development for a comprehensive IT and marketing services company, featuring modern homepage design and transparent pricing structure</p>
+                
+                <div class="case-links">
+                    <a href="https://evernetco.com/" target="_blank" class="case-link">View Live Website</a>
+                    <a href="https://evernetco.com/pricing/" target="_blank" class="case-link">View Pricing Page</a>
+                    <a href="https://evernetco.com/itemized-pricing/" target="_blank" class="case-link">View Itemized Pricing</a>
+                </div>
                 
                 <div class="case-details">
                     <div class="detail-group">
@@ -231,9 +237,9 @@
     <section class="case-navigation">
         <div class="container">
             <div class="nav-projects">
-                <a href="case-study-carepac.html" class="nav-project prev">
+                <a href="case-study-tulane.html" class="nav-project prev">
                     <span class="nav-label">← Previous Project</span>
-                    <span class="nav-title">CarePac Design Solutions</span>
+                    <span class="nav-title">Tulane Energy Law Center</span>
                 </a>
                 <a href="work.html" class="nav-all">
                     <span>View All Projects</span>
