--- a/work.html
+++ b/work.html
@@ -130,7 +130,7 @@
                 </article>
 
                 <!-- Growth Ladder Group -->
-                <article class="portfolio-item" data-category="web-design freelance">
+                <article class="portfolio-item" data-category="web-design freelance development">
                     <div class="portfolio-image">
                         <img src="Growth_Ladder_Pages.jpg" alt="Growth Ladder Group website showing professional business consulting design" class="portfolio-project-image">
                         <div class="portfolio-overlay">
@@ -145,7 +145,7 @@
                     <div class="portfolio-content">
                         <div class="project-meta">
                             <span class="project-category">Freelance</span>
-                            <span class="project-year">2023</span>
+                            <span class="project-year">2025</span>
                         </div>
                         <h3 class="project-title">Growth Ladder Group</h3>
                         <p class="project-description">
@@ -169,8 +169,88 @@
                     </div>
                 </article>
 
+                <!-- EVERNET -->
+                <article class="portfolio-item" data-category="web-design development">
+                    <div class="portfolio-image">
+                        <img src="EVERNET_Pages_01.jpg" alt="EVERNET Consulting website showing IT and marketing services design" class="portfolio-project-image">
+                        <div class="portfolio-overlay">
+                            <div class="overlay-content">
+                                <span class="project-type">WordPress Design & Development</span>
+                                <h3 class="project-title">EVERNET Consulting</h3>
+                                <p class="project-summary">IT & Marketing Services website with home and pricing pages</p>
+                                <a href="case-study-evernet.html" class="project-link">View Case Study</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="portfolio-content">
+                        <div class="project-meta">
+                            <span class="project-category">Web Design</span>
+                            <span class="project-year">2025</span>
+                        </div>
+                        <h3 class="project-title">EVERNET Consulting</h3>
+                        <p class="project-description">
+                            Complete WordPress website design and development for EVERNET Consulting, a comprehensive IT and marketing services company. Created a modern homepage and detailed pricing page showcasing their IT support, cybersecurity, marketing services, and website design offerings with transparent pricing structure.
+                        </p>
+                        <div class="project-tags">
+                            <span class="tag">WordPress</span>
+                            <span class="tag">Custom Design</span>
+                            <span class="tag">Pricing Pages</span>
+                        </div>
+                        <div class="project-results">
+                            <div class="result">
+                                <span class="result-value">2</span>
+                                <span class="result-label">Key pages designed</span>
+                            </div>
+                            <div class="result">
+                                <span class="result-value">WordPress</span>
+                                <span class="result-label">Platform</span>
+                            </div>
+                        </div>
+                    </div>
+                </article>
+
+                <!-- Tulane Energy Law Center -->
+                <article class="portfolio-item" data-category="web-design development">
+                    <div class="portfolio-image">
+                        <img src="Tulane_Website.jpg" alt="Tulane Energy Law Center Drupal website design" class="portfolio-project-image">
+                        <div class="portfolio-overlay">
+                            <div class="overlay-content">
+                                <span class="project-type">Web Design & Development</span>
+                                <h3 class="project-title">Tulane Energy Law Center</h3>
+                                <p class="project-summary">Full-stack Drupal development with custom design implementation</p>
+                                <a href="case-study-tulane.html" class="project-link">View Case Study</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="portfolio-content">
+                        <div class="project-meta">
+                            <span class="project-category">Development</span>
+                            <span class="project-year">2025</span>
+                        </div>
+                        <h3 class="project-title">Tulane Energy Law Center</h3>
+                        <p class="project-description">
+                            Full-stack Drupal development project for academic institution, featuring custom design implementation, content management, and academic resource organization.
+                        </p>
+                        <div class="project-tags">
+                            <span class="tag">Drupal</span>
+                            <span class="tag">Full-Stack</span>
+                            <span class="tag">Academic</span>
+                        </div>
+                        <div class="project-results">
+                            <div class="result">
+                                <span class="result-value">Full-Stack</span>
+                                <span class="result-label">Development</span>
+                            </div>
+                            <div class="result">
+                                <span class="result-value">Academic</span>
+                                <span class="result-label">Institution</span>
+                            </div>
+                        </div>
+                    </div>
+                </article>
+
                 <!-- Red Yes Studio -->
-                <article class="portfolio-item" data-category="web-design ux-research">
+                <article class="portfolio-item" data-category="web-design ux-research development">
                     <div class="portfolio-image">
                         <img src="Red-Yes-Home-Mockup.jpg" alt="Red Yes Studio website homepage" class="portfolio-project-image">
                         <div class="portfolio-overlay">
@@ -210,7 +290,7 @@
                 </article>
 
                 <!-- Peggy Reid Ogden -->
-                <article class="portfolio-item" data-category="web-design ux-research">
+                <article class="portfolio-item" data-category="web-design ux-research development">
                     <div class="portfolio-image">
                         <img src="156.jpg" alt="Peggy Reid Ogden artwork portfolio" class="portfolio-project-image">
                         <div class="portfolio-overlay">
@@ -249,85 +329,6 @@
                     </div>
                 </article>
 
-                <!-- EVERNET -->
-                <article class="portfolio-item" data-category="web-design development">
-                    <div class="portfolio-image">
-                        <img src="EVERNET_Pages_01.jpg" alt="EVERNET Consulting website showing IT and marketing services design" class="portfolio-project-image">
-                        <div class="portfolio-overlay">
-                            <div class="overlay-content">
-                                <span class="project-type">WordPress Design & Development</span>
-                                <h3 class="project-title">EVERNET Consulting</h3>
-                                <p class="project-summary">IT & Marketing Services website with home and pricing pages</p>
-                                <a href="case-study-evernet.html" class="project-link">View Case Study</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="portfolio-content">
-                        <div class="project-meta">
-                            <span class="project-category">Web Design</span>
-                            <span class="project-year">2024</span>
-                        </div>
-                        <h3 class="project-title">EVERNET Consulting</h3>
-                        <p class="project-description">
-                            Complete WordPress website design and development for EVERNET Consulting, a comprehensive IT and marketing services company. Created a modern homepage and detailed pricing page showcasing their IT support, cybersecurity, marketing services, and website design offerings with transparent pricing structure.
-                        </p>
-                        <div class="project-tags">
-                            <span class="tag">WordPress</span>
-                            <span class="tag">Custom Design</span>
-                            <span class="tag">Pricing Pages</span>
-                        </div>
-                        <div class="project-results">
-                            <div class="result">
-                                <span class="result-value">2</span>
-                                <span class="result-label">Key pages designed</span>
-                            </div>
-                            <div class="result">
-                                <span class="result-value">WordPress</span>
-                                <span class="result-label">Platform</span>
-                            </div>
-                        </div>
-                    </div>
-                </article>
-
-                <!-- Tulane Energy Law Center -->
-                <article class="portfolio-item" data-category="web-design development">
-                    <div class="portfolio-image">
-                        <div class="image-placeholder" style="background: linear-gradient(135deg, #6366f1 0%, #8b5cf6 100%);"></div>
-                        <div class="portfolio-overlay">
-                            <div class="overlay-content">
-                                <span class="project-type">Drupal Development</span>
-                                <h3 class="project-title">Tulane Energy Law Center</h3>
-                                <p class="project-summary">Full-stack Drupal development with custom design implementation</p>
-                                <span class="coming-soon-tag">Coming Soon</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="portfolio-content">
-                        <div class="project-meta">
-                            <span class="project-category">Development</span>
-                            <span class="project-year">2023</span>
-                        </div>
-                        <h3 class="project-title">Tulane Energy Law Center</h3>
-                        <p class="project-description">
-                            Full-stack Drupal development project for academic institution, featuring custom design implementation, content management, and academic resource organization.
-                        </p>
-                        <div class="project-tags">
-                            <span class="tag">Drupal</span>
-                            <span class="tag">Full-Stack</span>
-                            <span class="tag">Academic</span>
-                        </div>
-                        <div class="project-results">
-                            <div class="result">
-                                <span class="result-value">Full-Stack</span>
-                                <span class="result-label">Development</span>
-                            </div>
-                            <div class="result">
-                                <span class="result-value">Academic</span>
-                                <span class="result-label">Institution</span>
-                            </div>
-                        </div>
-                    </div>
-                </article>
 
                 <!-- SA Bar Logo -->
                 <article class="portfolio-item" data-category="brand-design logo">
@@ -345,7 +346,7 @@
                     <div class="portfolio-content">
                         <div class="project-meta">
                             <span class="project-category">Brand Design</span>
-                            <span class="project-year">2024</span>
+                            <span class="project-year">2025</span>
                         </div>
                         <h3 class="project-title">SA Bar Logo</h3>
                         <p class="project-description">
@@ -385,7 +386,7 @@
                     <div class="portfolio-content">
                         <div class="project-meta">
                             <span class="project-category">Web Design</span>
-                            <span class="project-year">2024</span>
+                            <span class="project-year">2025</span>
                         </div>
                         <h3 class="project-title">American Dry Stripping</h3>
                         <p class="project-description">
@@ -410,7 +411,7 @@
                 </article>
 
                 <!-- Trish Pearson Insurance -->
-                <article class="portfolio-item" data-category="social-media marketing">
+                <article class="portfolio-item" data-category="social-media marketing freelance">
                     <div class="portfolio-image">
                         <div class="image-placeholder" style="background: linear-gradient(135deg, #7c3aed 0%, #a855f7 100%);"></div>
                         <div class="portfolio-overlay">
@@ -424,8 +425,8 @@
                     </div>
                     <div class="portfolio-content">
                         <div class="project-meta">
-                            <span class="project-category">Social Media</span>
-                            <span class="project-year">2024</span>
+                            <span class="project-category">Freelance</span>
+                            <span class="project-year">2025</span>
                         </div>
                         <h3 class="project-title">Trish Pearson Insurance</h3>
                         <p class="project-description">
@@ -450,7 +451,7 @@
                 </article>
 
                 <!-- Bodyspeake -->
-                <article class="portfolio-item" data-category="social-media marketing">
+                <article class="portfolio-item" data-category="social-media marketing freelance">
                     <div class="portfolio-image">
                         <div class="image-placeholder" style="background: linear-gradient(135deg, #ec4899 0%, #f472b6 100%);"></div>
                         <div class="portfolio-overlay">
@@ -464,8 +465,8 @@
                     </div>
                     <div class="portfolio-content">
                         <div class="project-meta">
-                            <span class="project-category">Social Media</span>
-                            <span class="project-year">2024</span>
+                            <span class="project-category">Freelance</span>
+                            <span class="project-year">2025</span>
                         </div>
                         <h3 class="project-title">Bodyspeake</h3>
                         <p class="project-description">
@@ -505,7 +506,7 @@
                     <div class="portfolio-content">
                         <div class="project-meta">
                             <span class="project-category">Side Project</span>
-                            <span class="project-year">2024</span>
+                            <span class="project-year">2025</span>
                         </div>
                         <h3 class="project-title">Pet Sitting Website</h3>
                         <p class="project-description">
