Update service package pricing: reduced starting price to $1,000, adjusted pricing for Essential, Professional, and Premium website packages for clarity and consistency.

--- a/services.html
+++ b/services.html
@@ -93,7 +93,7 @@
                     <div class="package-pricing">
                         <div class="price-range">
                             <span class="price-from">Starting at</span>
-                            <span class="price-amount">$2,500</span>
+                            <span class="price-amount">$1,000</span>
                         </div>
                     </div>
                     
@@ -115,15 +115,15 @@
                         <h4>Package Options:</h4>
                         <div class="option-item">
                             <span class="option-name">Essential Website <span class="page-count">(1-5 pages)</span></span>
-                            <span class="option-price">$2,500 - $4,000</span>
+                            <span class="option-price">$1,000</span>
                         </div>
                         <div class="option-item">
                             <span class="option-name">Professional Website <span class="page-count">(6-10 pages)</span></span>
-                            <span class="option-price">$4,000 - $7,000</span>
+                            <span class="option-price">$2,500 - $4,000</span>
                         </div>
                         <div class="option-item">
                             <span class="option-name">Premium Website <span class="page-count">(11+ pages)</span></span>
-                            <span class="option-price">$7,000 - $12,000</span>
+                            <span class="option-price">$4,000+</span>
                         </div>
                     </div>
                     
