Add Riverbrook Community College case study page and update work portfolio

--- a/case-study-evernet.html
+++ b/case-study-evernet.html
@@ -244,9 +244,9 @@
                 <a href="work.html" class="nav-all">
                     <span>View All Projects</span>
                 </a>
-                <a href="case-study-growth-ladder.html" class="nav-project next">
+                <a href="case-study-riverbrook.html" class="nav-project next">
                     <span class="nav-label">Next Project →</span>
-                    <span class="nav-title">Growth Ladder Group</span>
+                    <span class="nav-title">Riverbrook Community College</span>
                 </a>
             </div>
         </div>
