--- a/case-study-growth-ladder.html
+++ b/case-study-growth-ladder.html
@@ -235,9 +235,9 @@
     <section class="case-navigation">
         <div class="container">
             <div class="nav-projects">
-                <a href="case-study-carepac.html" class="nav-project prev">
+                <a href="case-study-riverbrook.html" class="nav-project prev">
                     <span class="nav-label">← Previous Project</span>
-                    <span class="nav-title">CarePac Design Solutions</span>
+                    <span class="nav-title">Riverbrook Community College</span>
                 </a>
                 <a href="work.html" class="nav-all">
                     <span>View All Projects</span>
