--- a/work.html
+++ b/work.html
@@ -89,6 +89,46 @@
     <section class="portfolio-section">
         <div class="container">
             <div class="portfolio-grid">
+                <!-- Riverbrook Community College -->
+                <article class="portfolio-item" data-category="web-design development">
+                    <div class="portfolio-image">
+                        <img src="Riverbrook_design.jpg" alt="Riverbrook Community College open house landing page mockup" class="portfolio-project-image">
+                        <div class="portfolio-overlay">
+                            <div class="overlay-content">
+                                <span class="project-type">Elementor Landing Page</span>
+                                <h3 class="project-title">Riverbrook Community College</h3>
+                                <p class="project-summary">End-to-end assessment build with research, Figma, and development</p>
+                                <a href="case-study-riverbrook.html" class="project-link">View Case Study</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="portfolio-content">
+                        <div class="project-meta">
+                            <span class="project-category">Assessment</span>
+                            <span class="project-year">2025</span>
+                        </div>
+                        <h3 class="project-title">Riverbrook Community College</h3>
+                        <p class="project-description">
+                            A rapid assessment project delivering a high-converting open house landing page. Included stakeholder research synthesis, wireframes, high-fidelity Figma comps, and a pixel-accurate Elementor build on WordPress.
+                        </p>
+                        <div class="project-tags">
+                            <span class="tag">Figma</span>
+                            <span class="tag">Elementor</span>
+                            <span class="tag">UX Research</span>
+                        </div>
+                        <div class="project-results">
+                            <div class="result">
+                                <span class="result-value">6+</span>
+                                <span class="result-label">Breakpoints tested</span>
+                            </div>
+                            <div class="result">
+                                <span class="result-value">Custom</span>
+                                <span class="result-label">CSS code</span>
+                            </div>
+                        </div>
+                    </div>
+                </article>
+
                 <!-- CarePac Design -->
                 <article class="portfolio-item" data-category="freelance web-design">
                     <div class="portfolio-image">
