Update Riverbrook case study: added Photoshop to tools list and detailed the creation of the Hero image in the visual design section.

--- a/case-study-riverbrook.html
+++ b/case-study-riverbrook.html
@@ -79,7 +79,7 @@
                     </div>
                     <div class="detail-group">
                         <h3>Tools</h3>
-                        <p>Figma, Elementor Pro, WordPress</p>
+                        <p>Figma, Elementor Pro, WordPress, Photoshop</p>
                     </div>
                     <div class="detail-group">
                         <h3>Deliverables</h3>
@@ -159,7 +159,7 @@
                         <div class="step-number">03</div>
                         <div class="step-content">
                             <h3>Visual Design & Prototyping</h3>
-                            <p>I expanded the wireframe into a polished Figma system with headline styles (H1–H4), paragraph treatments, and reusable components. The palette leans on Riverbrook teal <code>#004F5D</code>, energetic gold <code>#FFED96</code>, light blue <code>#7CC1E0</code>, and navy accent <code>#004585</code> to balance youthful energy with academic credibility. Imagery carries the story, while Source Serif Pro keeps the typography grounded.</p>
+                            <p>I expanded the wireframe into a polished Figma system with headline styles (H1–H4), paragraph treatments, and reusable components. The palette leans on Riverbrook teal <code>#004F5D</code>, energetic gold <code>#FFED96</code>, light blue <code>#7CC1E0</code>, and navy accent <code>#004585</code> to balance youthful energy with academic credibility. I created the Hero image in Photoshop with simple masking. Imagery carries the story, while Source Serif Pro keeps the typography grounded.</p>
                             <div class="design-system">
                                 <div class="color-palette">
                                     <h4>Color Tokens</h4>
