Add favicon links to multiple case study pages for improved branding and user experience.

--- a/case-study-evernet.html
+++ b/case-study-evernet.html
@@ -7,6 +7,12 @@
     <meta name="description" content="Web & UX design case study for EVERNET Consulting - Complete WordPress website design and development for IT and marketing services company.">
     <link rel="canonical" href="https://meiratompkins.com/case-study-evernet.html">
     
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="favicon.svg">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon.svg">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon.svg">
+    <link rel="apple-touch-icon" href="favicon.svg">
+    
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
