--- a/case-study-red-yes.html
+++ b/case-study-red-yes.html
@@ -7,6 +7,12 @@
     <meta name="description" content="UX case study for Red Yes Studio - Complete brand identity and website redesign focusing on user engagement and conversion optimization.">
     <link rel="canonical" href="https://meiratompkins.com/case-study-red-yes.html">
     
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="favicon.svg">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon.svg">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon.svg">
+    <link rel="apple-touch-icon" href="favicon.svg">
+    
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
