--- a/case-study-growth-ladder.html
+++ b/case-study-growth-ladder.html
@@ -7,6 +7,12 @@
     <meta name="description" content="Freelance Wix website design and development case study for Growth Ladder Group - Creating a professional business consulting platform that converts prospects into clients.">
     <link rel="canonical" href="https://meiratompkins.com/case-study-growth-ladder.html">
     
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="favicon.svg">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon.svg">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon.svg">
+    <link rel="apple-touch-icon" href="favicon.svg">
+    
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
