--- a/case-study-riverbrook.html
+++ b/case-study-riverbrook.html
@@ -6,6 +6,12 @@
     <title>Riverbrook Community College Case Study - Meira Tompkins</title>
     <meta name="description" content="Design assessment case study for Riverbrook Community College's Open House landing page covering research, wireframes, high-fidelity design, and Elementor development.">
     <link rel="canonical" href="https://meiratompkins.com/case-study-riverbrook.html">
+    
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="favicon.svg">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon.svg">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon.svg">
+    <link rel="apple-touch-icon" href="favicon.svg">
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
