--- a/case-study-tulane.html
+++ b/case-study-tulane.html
@@ -7,6 +7,12 @@
     <meta name="description" content="Full-stack Drupal development case study for Tulane Energy Law Center - Custom design implementation, content management, and academic resource organization for academic institution.">
     <link rel="canonical" href="https://meiratompkins.com/case-study-tulane.html">
     
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="favicon.svg">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon.svg">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon.svg">
+    <link rel="apple-touch-icon" href="favicon.svg">
+    
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
