Update Riverbrook case study: refine registration form description to highlight inline validation and success message for improved user confidence.

--- a/case-study-riverbrook.html
+++ b/case-study-riverbrook.html
@@ -233,7 +233,7 @@
 
                     <div class="feature-item">
                         <h3>Trust Signals & Form</h3>
-                        <p>I surfaced the 85% graduate success rate and a parent testimonial before the form. The RSVP experience trims optional fields, adds inline validation, and thanks visitors with a personalized message to improve completion confidence.</p>
+                        <p>I surfaced the 85% graduate success rate and a parent testimonial before the form. The Registration Form adds inline validation and adds a success message at the end of the form registration to improve completion confidence.</p>
                         <div class="feature-visual">
                             <div class="mockup-browser">
                                 <div class="browser-header">
