Refactor portfolio section: remove Riverbrook Community College case study, update San Antonio Bar logo details, and add Northstar Healthcare project with comprehensive brand refresh description. Adjust CSS for solution details and layout improvements.

--- a/work.html
+++ b/work.html
@@ -89,46 +89,6 @@
     <section class="portfolio-section">
         <div class="container">
             <div class="portfolio-grid">
-                <!-- Riverbrook Community College -->
-                <article class="portfolio-item" data-category="web-design development">
-                    <div class="portfolio-image">
-                        <img src="Riverbrook_design.jpg" alt="Riverbrook Community College open house landing page mockup" class="portfolio-project-image">
-                        <div class="portfolio-overlay">
-                            <div class="overlay-content">
-                                <span class="project-type">Elementor Landing Page</span>
-                                <h3 class="project-title">Riverbrook Community College</h3>
-                                <p class="project-summary">End-to-end assessment build with research, Figma, and development</p>
-                                <a href="case-study-riverbrook.html" class="project-link">View Case Study</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="portfolio-content">
-                        <div class="project-meta">
-                            <span class="project-category">Assessment</span>
-                            <span class="project-year">2025</span>
-                        </div>
-                        <h3 class="project-title">Riverbrook Community College</h3>
-                        <p class="project-description">
-                            A rapid assessment project delivering a high-converting open house landing page. Included stakeholder research synthesis, wireframes, high-fidelity Figma comps, and a pixel-accurate Elementor build on WordPress.
-                        </p>
-                        <div class="project-tags">
-                            <span class="tag">Figma</span>
-                            <span class="tag">Elementor</span>
-                            <span class="tag">UX Research</span>
-                        </div>
-                        <div class="project-results">
-                            <div class="result">
-                                <span class="result-value">6+</span>
-                                <span class="result-label">Breakpoints tested</span>
-                            </div>
-                            <div class="result">
-                                <span class="result-value">Custom</span>
-                                <span class="result-label">CSS code</span>
-                            </div>
-                        </div>
-                    </div>
-                </article>
-
                 <!-- CarePac Design -->
                 <article class="portfolio-item" data-category="freelance web-design">
                     <div class="portfolio-image">
@@ -373,13 +333,13 @@
                 <!-- SA Bar Logo -->
                 <article class="portfolio-item" data-category="brand-design logo">
                     <div class="portfolio-image">
-                        <div class="image-placeholder" style="background: linear-gradient(135deg, #dc2626 0%, #ef4444 100%);"></div>
+                        <img src="Business_Card.jpg" alt="San Antonio Bar Association business card" class="portfolio-project-image">
                         <div class="portfolio-overlay">
                             <div class="overlay-content">
                                 <span class="project-type">Logo Design</span>
-                                <h3 class="project-title">SA Bar Logo</h3>
-                                <p class="project-summary">Professional logo design for legal services</p>
-                                <span class="coming-soon-tag">Coming Soon</span>
+                                <h3 class="project-title">San Antonio Bar Association</h3>
+                                <p class="project-summary">Brand identity featuring the iconic Alamo arch</p>
+                                <a href="case-study-sa-bar.html" class="project-link">View Case Study</a>
                             </div>
                         </div>
                     </div>
@@ -388,9 +348,9 @@
                             <span class="project-category">Brand Design</span>
                             <span class="project-year">2025</span>
                         </div>
-                        <h3 class="project-title">SA Bar Logo</h3>
+                        <h3 class="project-title">San Antonio Bar Association</h3>
                         <p class="project-description">
-                            Professional logo design for legal services, creating a strong brand identity that conveys trust, authority, and professionalism. The design balances traditional legal aesthetics with modern visual appeal.
+                            A comprehensive logo design project for the San Antonio Bar Association, incorporating the iconic Alamo arch—a distinctive hump-shaped cap that represents San Antonio's heritage. Through three iterations of revisions, we developed multiple logo variations including logo marks with the Alamo integrated into the letter "A" and text-based logos, all with various color options and application mockups.
                         </p>
                         <div class="project-tags">
                             <span class="tag">Logo Design</span>
@@ -399,12 +359,12 @@
                         </div>
                         <div class="project-results">
                             <div class="result">
-                                <span class="result-value">Professional</span>
-                                <span class="result-label">Logo Design</span>
+                                <span class="result-value">3</span>
+                                <span class="result-label">Design Iterations</span>
                             </div>
                             <div class="result">
-                                <span class="result-value">Brand</span>
-                                <span class="result-label">Identity</span>
+                                <span class="result-value">Multiple</span>
+                                <span class="result-label">Logo Variations</span>
                             </div>
                         </div>
                     </div>
@@ -525,6 +485,46 @@
                             <div class="result">
                                 <span class="result-value">Content</span>
                                 <span class="result-label">Creation</span>
+                            </div>
+                        </div>
+                    </div>
+                </article>
+
+                <!-- Northstar Healthcare -->
+                <article class="portfolio-item" data-category="web-design brand-design">
+                    <div class="portfolio-image">
+                        <div class="image-placeholder" style="background: linear-gradient(135deg, #0ea5e9 0%, #06b6d4 100%);"></div>
+                        <div class="portfolio-overlay">
+                            <div class="overlay-content">
+                                <span class="project-type">Website Refresh, Video Production & Print</span>
+                                <h3 class="project-title">Northstar Healthcare</h3>
+                                <p class="project-summary">Comprehensive brand refresh with website redesign, video production, and tradeshow materials</p>
+                                <span class="coming-soon-tag">Coming Soon</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="portfolio-content">
+                        <div class="project-meta">
+                            <span class="project-category">Web Design</span>
+                            <span class="project-year">2025</span>
+                        </div>
+                        <h3 class="project-title">Northstar Healthcare</h3>
+                        <p class="project-description">
+                            A comprehensive brand refresh project for <a href="https://northstarhealthcare.net/" target="_blank" style="color: var(--accent-color); text-decoration: none; font-weight: 500;">Northstar Healthcare</a>, including website redesign, video production, and tradeshow print production. This multidisciplinary project focuses on modernizing their digital presence and creating cohesive marketing materials that reflect their "People Helping People" mission.
+                        </p>
+                        <div class="project-tags">
+                            <span class="tag">Website Refresh</span>
+                            <span class="tag">Video Production</span>
+                            <span class="tag">Tradeshow Print</span>
+                        </div>
+                        <div class="project-results">
+                            <div class="result">
+                                <span class="result-value">Website</span>
+                                <span class="result-label">Refresh</span>
+                            </div>
+                            <div class="result">
+                                <span class="result-value">Video</span>
+                                <span class="result-label">Production</span>
                             </div>
                         </div>
                     </div>
@@ -676,7 +676,7 @@
                                 <li><a href="case-study-evernet.html">EVERNET</a></li>
                                 <li><a href="case-study-carepac.html">CarePac Design</a></li>
                                 <li><a href="case-study-growth-ladder.html">Growth Ladder Group</a></li>
-                                <li><a href="case-study-red-yes.html">Red Yes Studio</a></li>
+                                <li><a href="case-study-sa-bar.html">San Antonio Bar Association</a></li>
                             </ul>
                         </div>
                     </div>
